# hft

./: .gitignore  start.sh
backend/: .env  alembic.ini  pyproject.toml  requirements.txt
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/alembic/: env.py
backend/alembic/versions/: 90126ec99a1c_add_interval_to_simulation_sessions.py  a0ade0f6e417_add_fee_columns.py  fb5dcf30fb9e_initial_tables.py
backend/app/: config.py  main.py
backend/app/api/: backtest.py  simulation.py  stocks.py  strategies.py  ws.py
backend/app/data/: cache.py  provider.py  registry.py  yahoo.py
backend/app/db/: engine.py  session.py
backend/app/engine/: backtester.py  metrics.py
backend/app/indicators/: bollinger.py  macd.py  moving_average.py  rsi.py
backend/app/models/: db_models.py  domain.py
backend/app/simulation/: broker.py  clock.py  manager.py  portfolio.py  runner.py
backend/app/strategies/: base.py  bollinger_strategy.py  ma_crossover.py  macd_strategy.py  mean_reversion.py  momentum.py  pairs_trading.py  registry.py  rsi_strategy.py
backend/hft_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BacktestChart.tsx  BacktestResults.tsx  ChartLegend.tsx  ConfigurationCard.tsx  LiveChart.tsx  Navbar.tsx  ParameterForm.tsx  PortfolioDashboard.tsx  SimulationControls.tsx  StockSearch.tsx  StrategySelector.tsx  TradeLog.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  liveMetrics.ts  (+1 more)
(+6 files in other folders)
